--- a/src/components/UserProfileComponent/UserProfileComponent.scss
+++ b/src/components/UserProfileComponent/UserProfileComponent.scss
@@ -17,7 +17,6 @@
     }
     &__user-contact-number {
       font-weight: normal;
-      font-size: 0.8rem;
     }
   }
 }
