--- a/src/doctor/CardComponent/CardComponent.scss
+++ b/src/doctor/CardComponent/CardComponent.scss
@@ -6,6 +6,11 @@
   .card-header {
     display: flex;
     justify-content: space-between;
+
+    &.active-card {
+      background: $fill-orange;
+    }
+
     &.bg-ark {
       background: $fill-ark;
       color: $fill-white;
